# pac-gif

./: README.md  index.html  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json
src/: App.svelte  basic.scss  bootstrap.scss  main.js  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: app_commands.rs
src-tauri/src/libs/: gif_creator.rs
src-tauri/src/models/: image_object.rs  mod.rs
src/app/: App.vue  Router.ts
src/pages/: Home.vue
