[package]
name = "pac-gif"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2.4", features = ["api-all"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0"
simple_logger = { version = "4.1.0", features = ["colors", "stderr"] }
log = "0.4.17"
png = "0.17.8"
image = { version = "0.24.6", features = ["png", "default"] }
winapi = { version = "0.3.9", features = ["windef", "wingdi"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
